--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Water Accident</title>
+    <!-- SPA GitHub  https://github.com/rafgraph/spa-github-pages/blob/gh-pages/404.html -->
     <script type="text/javascript">
       var pathSegmentsToKeep = 1;
 
